--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
+		<script type="text/javascript" src="https://js.stripe.com/v1/"></script>
 	</head>
 	<body ng-cloak ng-app="hakaToRun">
 
