--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
 		<script type="text/javascript" src="https://js.stripe.com/v1/"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	</head>
 	<body ng-cloak ng-app="hakaToRun">
 
@@ -189,6 +190,6 @@
                 }
             }
 		</script>
-
+		
 	</body>
 </html>
